chronicle-example/src/snapshots/chronicle_example__test__revision.snap
---
source: chronicle-example/src/test.rs
assertion_line: 220
expression: created
---
[data.wasRevisionOf]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
