chronicle-example/src/snapshots/chronicle_example__test__untyped_derivation-2.snap
---
source: chronicle-example/src/test.rs
assertion_line: 167
expression: derived
---
[data.entityById]
id = 'http://blockchaintp.com/chronicle/ns#entity:generated'
name = 'generated'

[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
