chronicle-example/src/snapshots/chronicle_example__test__untyped_derivation.snap
---
source: chronicle-example/src/test.rs
assertion_line: 141
expression: created
---
[data.wasDerivedFrom]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
